--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,3 +32,9 @@ input[type="checkbox"].toggle:checked + span > span {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
+.clip-path-arrow {
+    clip-path: polygon(100% 50%, 0 0, 0 100%);
+}
+.btn-gradient {
+    background: linear-gradient(108.74deg, #2e429b -60.43%, #18faf8 193.77%);
+  }
